Check that we've been given a valid collection in retrieveItems()

BUG: 354994
FIXED-IN: 15.12.2